fixed some spacing issues

--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -3,10 +3,10 @@
    ========================================================================== */
 
 .masthead {
-  margin-top: 40px;
+  margin-top: 50px;
   @include clearfix;
   @include media($medium) {
-    margin-top: 70px;
+    margin-top: 65px;
   }
   .wrap {
     text-align: center;
